welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:45: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:48: error: expected start of definition
	override def forward()  {
                 ^Diagonal:51: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:54: error: expected start of definition
	override def backward() {
                 ^Diagonal:57: error: Unmatched closing brace '}' ignored here
}
^