welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {

var a = getMondeHauteur()
var b = getMondeLargeur()
var x = getX()
var y = getY()

ecritMessage(diag)

while (x != a-1 || y != b-1)
{if (y == 0)
	{y = x; x = 0;}
	else {x = x+1; y = y+1}


setPos(x, y)
diag = diag +1
ecritMessage(diag)
	}

}


















}
